# module_validator_rust

./: .cursorrules  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  config.yaml  instructions.md  key  pyproject.toml  setup.sh
.reference/: config_generation.py  configuration_template.py  install.py  module_registrar.py
inference_module/modules/: module_wrapper.py
inference_module/python_modules/translation/: setup_translation.sh
modules/: inference_module.py  module_wrapper.py
modules/eden-subnet/: setup_eden-subnet.py
modules/test_module/: setup_test_module.py
python_modules/: module_wrapper.py
scripts/: cleanup.sh  loop.py  parse_arguments.py  release  setup_database.sh  setup_rust.sh  subprocess
src/: api.rs  cli.rs  config.rs  config_parser.rs  database.rs  lib.rs  main.rs  miner.rs  proxy.rs  registry.rs  subnet_module.rs  utils.rs  validator.rs
src/inference/: inference_requests.rs  mod.rs  python_executor.rs  translation.rs
src/modules/: inference_module.rs  mod.rs  subnet_module.rs
src/tests/: config_tests.rs  database_tests.rs  inference_module_tests.rs  mod.rs  registry_tests.rs  subnet_moduels_tests.rs  utils_tests.rs  validator_tests.rs
subnets/: commune.json
tests/: integration_tests.rs
