[package]
name = "module_validator"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres"] }
config = "0.13"
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"
pyo3 = { version = "0.18", features = ["auto-initialize"] }