[package]
name = "module_validator"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres"] }
config = "0.13"
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"
pyo3 = { version = "0.18", features = ["auto-initialize"] }
base64 = "0.13.0"
url = "2.2"
clap = { version = "3.0", features = ["derive"] }
regex = "1.5"
dialoguer = "0.10"
tempfile = "3.8.1"
hyper = { version = "0.14", features = ["full"] }
actix-web = "4.0"